# tero-rs

./: .dockerignore  .gitallowed  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Cargo.toml.bak  Dockerfile  README.md
crates/mycelium-bench/: Cargo.toml  README.md
crates/mycelium-bench/baselines/: BASELINE-x86_64-linux-4hw.json
crates/mycelium-bench/reports/: .gitignore  SAMPLE-report.json  SAMPLE-report.md
crates/mycelium-bench/src/: backend.rs  corpus.rs  lib.rs  llm.rs  measure.rs  report.rs  scaling.rs  timing.rs  verdict.rs
crates/mycelium-bench/tests/: SYNTHETIC-SAMPLE-grok-4.3-self-test.json  harness_end_to_end.rs
crates/mycelium-build/: Cargo.toml  README.md
crates/mycelium-build/src/: cache.rs  lib.rs  target.rs
crates/mycelium-cert/: Cargo.toml  README.md
crates/mycelium-cert/src/: check.rs  dense.rs  dense_vsa.rs  lib.rs  mode.rs
crates/mycelium-cert/tests/: check.rs  conformance.rs  dense.rs  dense_vsa.rs  mode.rs  mutant_witnesses.rs  sc3.rs  swap.rs
crates/mycelium-check/: Cargo.toml  README.md
crates/mycelium-check/src/: lib.rs
crates/mycelium-cli/: Cargo.toml  README.md
crates/mycelium-cli-common/: Cargo.toml  README.md
crates/mycelium-cli-common/src/: lib.rs
crates/mycelium-cli/src/: lib.rs
crates/mycelium-core/: Cargo.toml  README.md
crates/mycelium-core/src/: binary.rs  bound.rs  cert_mode.rs  content.rs  data.rs  datum.rs  guarantee.rs  id.rs  lib.rs  lower.rs  meta.rs  node.rs  prim.rs  recon.rs  repr.rs  value.rs  wrapping.rs
crates/mycelium-core/tests/: guard_hole_census.rs  serde_roundtrip.rs
crates/mycelium-dense/: Cargo.toml  README.md
crates/mycelium-dense/src/: lib.rs  tests.rs
crates/mycelium-dense/tests/: rounding_bound.rs
crates/mycelium-diag/: Cargo.toml  README.md
crates/mycelium-diag/src/: lib.rs
crates/mycelium-doc/: Cargo.toml  README.md
crates/mycelium-doc/src/: apiref.rs  book.rs  build.rs  corpus.rs  doc_lint.rs  hash.rs  ir.rs  lib.rs  lib_index.rs
crates/mycelium-doc/tests/: guard_hole_census.rs  pipeline.rs
crates/mycelium-fmt/: Cargo.toml  README.md
crates/mycelium-fmt/src/: lib.rs  tests.rs
crates/mycelium-fmt/tests/: conformance.rs
crates/mycelium-interp/: Cargo.toml  README.md
crates/mycelium-interp/src/: budget.rs  lib.rs  parallel.rs  prims.rs  supervise.rs  swap.rs
crates/mycelium-interp/tests/: golden.rs  prim_table.rs
crates/mycelium-l1/: Cargo.toml  README.md
crates/mycelium-l1/src/: affine.rs  ambient.rs  ast.rs  checkty.rs  decision.rs  elab.rs  error.rs  eval.rs  fuse.rs  grade.rs  lexer.rs  lib.rs  mono.rs  nodule.rs  parse.rs  substrate.rs  token.rs  totality.rs  usefulness.rs
crates/mycelium-l1/tests/: ambient.rs  aot_vs_interp_bench.rs  check.rs  closures.rs  compiler_stage1.rs  compiler_stage2.rs  compiler_stage3.rs  compiler_stage3_ast.rs  compiler_stage4_ambient.rs  compiler_stage4_substrate.rs  compiler_stage4_totality.rs  conformance.rs  depth_metric_parity.rs  differential.rs  enablement.rs  fieldspec_fn_lowering.rs  frame_size_baseline.rs  guard_hole_census.rs  list_literal.rs  lower_derive.rs  object_desugar.rs  phylum.rs  prim_table.rs  runnable_gate.rs  spike_m994_cost.rs  std_bytes_slice.rs  std_cmp.rs  std_collections.rs  std_fmt.rs  std_generic_conformance.rs  std_iter.rs  std_math.rs  std_text.rs  std_widthcast.rs  width_generic.rs
crates/mycelium-lint/: Cargo.toml  README.md
crates/mycelium-lint/src/: lib.rs
crates/mycelium-lsp/: Cargo.toml  README.md
crates/mycelium-lsp/examples/: check.rs  llm_canonical_parse.rs
crates/mycelium-lsp/src/: baseline.rs  completions.rs  definition.rs  expand.rs  feedback.rs  fmt.rs  hover.rs  lib.rs  lint.rs  llm_canonical_parser.rs  project.rs  semantic.rs  span.rs  sync.rs  wire.rs
crates/mycelium-lsp/tests/: diagnostics.rs  guard_hole_census.rs  prim_feedback.rs  recover.rs  scripted_client.rs
crates/mycelium-mir-passes/: Cargo.toml  README.md
crates/mycelium-mir-passes/src/: balance.rs  corpus.rs  emit.rs  eval.rs  lib.rs  rc_ir.rs
crates/mycelium-mir-passes/tests/: guard_hole_census.rs
crates/mycelium-mlir/: Cargo.toml  README.md
crates/mycelium-mlir/src/: accel.rs  aot.rs  bitnet.rs  budget.rs  channel.rs  concurrent.rs  dense_codegen.rs  deploy.rs  dialect.rs  inject.rs  inject_cert.rs  inject_gate.rs  jit.rs  lib.rs  llvm.rs  mode.rs  pack.rs  rc_plan.rs  runtime.rs  simd.rs  specialize.rs  swap_codegen.rs  trampoline.rs  vr4.rs  vsa_codegen.rs  vsa_jit.rs
crates/mycelium-mlir/tests/: aot_data_sharing.rs  bitnet_accel.rs  bitnet_throughput.rs  closure_widening_differential.rs  concurrent_threeway_differential.rs  dense_differential.rs  differential.rs  inject_hotswap.rs  jit_differential.rs  mode_selection.rs  native_differential.rs  native_packed_layout.rs  passes_differential.rs  recursion_differential.rs  recursion_trampoline_differential.rs  simd_differential.rs  specialize_differential.rs  swap_differential.rs  threeway_codegen_differential.rs  threeway_differential.rs  unified_threeway_differential.rs  vr4_cross_backend.rs  vsa_differential.rs  vsa_jit_differential.rs  wrong_layout.rs
crates/mycelium-numerics/: Cargo.toml  README.md
crates/mycelium-numerics/src/: cert.rs  error.rs  lib.rs  prob.rs  round.rs
crates/mycelium-numerics/tests/: properties.rs
crates/mycelium-proj/: Cargo.toml  README.md
crates/mycelium-proj/src/: cert_scope.rs  header.rs  lib.rs  manifest.rs  resolve.rs
crates/mycelium-proj/tests/: conformance.rs
crates/mycelium-rt-abi/: Cargo.toml
crates/mycelium-rt-abi/src/: lib.rs  reclamation.rs  supervision.rs
crates/mycelium-sched/: Cargo.toml
crates/mycelium-sched/src/: lib.rs  pool.rs  scheduler.rs
crates/mycelium-sec/: Cargo.toml  README.md
crates/mycelium-sec/src/: lib.rs
crates/mycelium-select/: Cargo.toml  README.md
crates/mycelium-spore/: Cargo.toml  README.md
crates/mycelium-stack/: Cargo.toml  README.md
crates/mycelium-std-cmp/: Cargo.toml  README.md
crates/mycelium-std-collections/: Cargo.toml  README.md
crates/mycelium-std-conformance/: Cargo.toml
crates/mycelium-std-core/: Cargo.toml  README.md
(+519 files in other folders)
