# tero-rs — standalone (no mycelium language crates).
[package]
name = "tero"
version = "0.2.0"
description = "tero — transparent memory substrate & agent knowledge API: deterministic Layer-1 corpus index + optional Layer-2 VSA retrieval, MCP and HTTP fronts"
edition = "2021"
rust-version = "1.85.0"
license = "MIT"
repository = "https://github.com/tzervas/tero-rs"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "io-util"] }
axum = "0.8"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[[bin]]
name = "tero-index"
path = "src/bin/tero-index.rs"

[[bin]]
name = "tero-http"
path = "src/bin/tero-http.rs"

[[bin]]
name = "tero-mcp"
path = "src/bin/tero-mcp.rs"

[[bin]]
name = "tero-eval"
path = "src/bin/tero-eval.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
overflow-checks = true
