[package]
name = "mycelium-cli"
version = "0.0.0"
description = "myc — the one-command toolchain driver (M-733): `myc init|build|check|test|run` over a Mycelium phylum, with DN-22 structured, actionable diagnostics (never a raw panic; G2). Orchestrates the real library APIs (mycelium-proj/-spore/-l1) directly — no fragile subprocess plumbing. KC-3: above the kernel."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# Project manifest parsing (M-359) + the content-addressed spore build/registry (M-368/M-732).
mycelium-proj = { path = "../mycelium-proj" }
mycelium-spore = { path = "../mycelium-spore" }
# The L1 front-end: parse + type-check, so `myc check` is a real (not stubbed) verification.
mycelium-l1 = { path = "../mycelium-l1" }
# The trusted reference interpreter (M-908): `myc run` v0 elaborates the checked nodule to closed
# L0 Core IR and evaluates it here — the same trusted execution path the differential suite pins.
mycelium-interp = { path = "../mycelium-interp" }
# The shared CLI substrate (M-643): the `.myc` source walk + read helpers, reused not re-rolled.
mycelium-cli-common = { path = "../mycelium-cli-common" }

[[bin]]
name = "myc"
path = "src/bin/myc.rs"
