[package]
name = "mycelium-doc"
version = "0.0.0"
description = "myc-doc — the M-363 documentation BUILD pipeline: a content-addressed doc-IR (a PROJECTION of the corpus + code + M-359 metadata, never a parallel truth — ADR-003/G11) with many renderers (HTML · Typst→PDF · machine JSON) and the §4.1 doc quality-bar lint (M-363 §6, 8 checks) run over that IR. Undocumented is FLAGGED, never invented (the prose analogue of G2). KC-3 — above the kernel; no kernel change; no new workspace dependency."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# Content-addressing (ADR-003): reuse the kernel's BLAKE3 `ContentHash` shape so a doc node's
# identity is the same `blake3:<hex>` form as every other content address. blake3 + serde +
# serde_json are already vetted workspace deps (mycelium-core/-lsp/...); NO new dependency.
mycelium-core = { path = "../mycelium-core" }
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
# The M-359 nodule-header metadata the apiref generator projects from (G2: a missing @summary is an
# explicit "undocumented" node, never invented). Above the kernel (KC-3).
mycelium-proj = { path = "../mycelium-proj" }
# The trusted L1 parse + type-check used by the "checked-examples" §4.1 lint (every checked inline
# example must actually type-check — T7.5/T7.1). The interpreter/checker is the trusted base.
mycelium-l1 = { path = "../mycelium-l1" }
# The shared RFC-0041 recursion-budget + guarded-stack leaf (W1, §4.7): guards `Node::walk` against a
# host-stack overflow on a pathologically deep doc-IR tree. A leaf dep, not a kernel dep (KC-3).
mycelium-workstack = { path = "../mycelium-workstack" }

[[bin]]
name = "myc-doc"
path = "src/bin/myc-doc.rs"
