[package]
name = "mycelium-fmt"
version = "0.0.0"
description = "mycfmt — the canonical formatter (M-364; M-142 grows up): an identity-preserving projection over .myc sources (RFC-0001 §4.6/§4.8; ADR-003 — formatting never changes content-addressed identity). Three checked invariants (identity-preservation · idempotence · header-preservation); never-silent refusals (no partial rewrite, G2); reads the [toolchain].format hard pin (M-359). KC-3 — above the kernel; no new dependency."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# Reuses the L1 parser + canonical surface printer (M-142) and the M-358/M-359 header layer.
# No new external dependency (the workspace keeps its deps few/vetted; a new one is an ADR).
mycelium-l1 = { path = "../mycelium-l1" }
mycelium-proj = { path = "../mycelium-proj" }
# M-643: the shared CLI substrate (stdin-or-file `read_source`). In-workspace path dep, std-only —
# no new external crate enters the tree (KC-3).
mycelium-cli-common = { path = "../mycelium-cli-common" }
# RFC-0041 W1 (§4.7 RR-29): the shared recursion-budget + guarded-stack leaf. Closes the render-family
# guard hole (`render_expr_canonical`/`render_flat`/`render_body_with_comments` et al.) by running
# those passes on the grown worker stack instead of the caller's — in-workspace path dep, no new
# external crate (KC-3).
mycelium-workstack = { path = "../mycelium-workstack" }

[[bin]]
name = "mycfmt"
path = "src/bin/mycfmt.rs"
