[package]
name = "mycelium-interp"
version = "0.0.0"
description = "Reference interpreter ŌĆö the trusted executable semantics for the Core IR (RFC-0004; ADR-009). Skeleton; M-110."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
mycelium-core = { path = "../mycelium-core" }
# The Dense paradigm kernel: the dense elementwise prim group (`dense.*`, M-890) delegates to
# `DenseSpace` ŌĆö the kernel constructs the result `Value` with its honest per-op tag/bound and the
# prim wrapper carries it through unchanged (VR-5). Downward-only dep (DN-66: dense sits on core).
mycelium-dense = { path = "../mycelium-dense" }
# The verified-numerics kernels: composing an approximate input's bound honestly (M-204; ADR-010).
mycelium-numerics = { path = "../mycelium-numerics" }
# The work-stealing OS-thread Scheduler (M-709/M-861), relocated below mycelium-interp (E25) so
# the interpreter's own parallel evaluation (M-862) can use it without a
# mycelium-interp <-> mycelium-std-runtime cycle. Wired into `src/parallel.rs` (M-862): the
# top-level pure-argument batch is dispatched through `Scheduler::run_indexed`.
mycelium-sched = { path = "../mycelium-sched" }
# The VSA algebra kernel: the model-dispatched VSA bind group (`vsa.*`, M-892) delegates to the
# Value-level model ops (`MapI`/`Fhrr`/`Bsc`) ŌĆö the kernel constructs the result `Value` with its
# honest per-model tag/bound and the prim wrapper carries it through unchanged (VR-5).
# Downward-only dep (ADR-008: vsa sits on core ŌĆö the M-890 `mycelium-dense` precedent).
mycelium-vsa = { path = "../mycelium-vsa" }
# RFC-0041 W4: the shared never-silent recursion budget + growable-stack guard. The L0 reference
# interpreter charges this budget at its structural-recursion points (`step`/`subst`/value read-off)
# and runs on the growable deep stack, so a crafted deep-but-fuel-cheap value refuses cleanly with
# `EvalError::DepthLimit` instead of a host-stack `SIGABRT` (RR-29 ┬¦0.1). Downward-only leaf dep
# (DN-68: workstack is a leaf on `std` + `mycelium-stack` ŌĆö interp stratum 2 ŌåÆ workstack 1).
mycelium-workstack = { path = "../mycelium-workstack" }
# M-912 (`enb`): surfaces the kernel's own content-addressing hash (BLAKE3, M-103 ŌĆö
# `mycelium-core::content::Canon`/`id::ContentHash` already use it) as the `hash.blake3` prim. Same
# crate + version the kernel content-addresses with (workspace-pinned), so the wrapper adds no
# additional algorithmic uncertainty beyond the kernel's own use ŌĆö the basis for the `Exact` tag.
blake3.workspace = true
