[package]
name = "mycelium-l1"
version = "0.0.0"
description = "L1 prototype (RFC-0006/RFC-0007; NON-NORMATIVE until those RFCs are ratified): lexer + parser for the ratified DN-02 vocabulary (conformance-corpus gated), the v0 monomorphic typechecker, the structural totality checker + matured gate, the fuel-guarded L1 evaluator, and elaboration to the L0 Core IR on the evaluation-complete fragment."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# The L1 evaluator produces L0 values and reuses the trusted primitive/swap semantics — the same
# registries the reference interpreter and the AOT path share (RFC-0007 §4.6).
mycelium-core = { path = "../mycelium-core" }
mycelium-interp = { path = "../mycelium-interp" }
mycelium-cert = { path = "../mycelium-cert" }
# `forage` activation (M-906, DN-70 D1/DN-63 §3.5): reuses the existing RFC-0005 SelectionPolicy
# machinery verbatim ("no new mechanism", DN-70) for the D-lite single-node placement decision +
# its mandatory EXPLAIN. FLAG (M-906 kickoff-note deviation): the task brief's file-ownership list
# named this Cargo.toml "do not touch, FLAG if needed" as a swarm-collision default; this edge is
# additive (downward-only, same `core` tier, verified acyclic via `cargo xtask deps` — see
# `xtask/deps-strata.toml`: mycelium-l1=4 > mycelium-select=1), zero-collision (this is the only
# leaf on the L1 frontend right now, per the kickoff's serial-lane rule), and already the
# established pattern for five other crates (`mycelium-lsp`/`mlir`/`std-runtime`/`vsa`/
# `std-select`). Reusing the *existing* mechanism (DN-70's explicit mandate) outweighs the default
# swarm-hygiene caution here; flagged for integrator review rather than silently applied.
mycelium-select = { path = "../mycelium-select" }
# Host-stack management for the recursive checker/elaborator, kept OUTSIDE this trusted kernel so the
# kernel stays `#![forbid(unsafe_code)]` (ADR-014). The kernel calls only its safe `with_deep_stack`.
mycelium-stack = { path = "../mycelium-stack" }
# RFC-0041 (Wave-1): the shared never-silent recursion budget the frontend's recursive checker passes
# charge against (usefulness / decision-tree / grade / list-literal spine), so a pathological input is
# refused with an explicit `BudgetError` — never a host-stack overflow (§4.7). Leaf crate (DN-68
# acyclic, downward-only): depends only on `std` + `mycelium-stack`, never upward on `l1`.
mycelium-workstack = { path = "../mycelium-workstack" }

[dev-dependencies]
# The RFC-0007 §4.6 differential: L1-eval vs elaborate→L0-interp vs elaborate→AOT, validated
# through the M-210 shared TV checker.
mycelium-mlir = { path = "../mycelium-mlir" }
mycelium-numerics = { path = "../mycelium-numerics" }
# M-890 (kickoff `enb`, Gap C): the dense elementwise prim group's conformance/three-way tests
# build their `Dense` input values through the kernel's own constructor (`DenseSpace::value`) —
# the only dense value-construction form until a surface literal lands (Gap A). Test scope only.
mycelium-dense = { path = "../mycelium-dense" }
# NOTE (M-971): the retained Rust std oracles (`mycelium-std-{core,diag,error,recover,select,spore,
# swap,ternary,testing}`) for the `lib/std/*.myc` port-differentials are NO LONGER dev-deps of this
# crate. `mycelium-l1` is a `core`-tier crate; those are `std`-tier — a `core -> std` dev edge that
# the DN-68 acyclic-deps invariant forbids (`no-upward-tier-edges`), which is exactly the regression
# M-971 fixes. The port-differential tests (`tests/std_*.rs`) + their shared `harness/` were
# relocated to the new `mycelium-std-conformance` crate (tier `std`), which legitimately depends on
# both the L1 stack and the std oracles. See DN-68 + xtask/deps-strata.toml.
