[package]
name = "mycelium-lsp"
version = "0.0.0"
description = "Minimal toolchain surface (FR-S5): invariant linter (M-141), canonical formatter (M-142), and the LSP feedback facade (M-140/M-221) — one surface for diagnostics, swap certificates, bound/guarantee annotations, lowering-stage dumps, and selection EXPLAIN traces."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
mycelium-core = { path = "../mycelium-core" }
mycelium-interp = { path = "../mycelium-interp" }
mycelium-cert = { path = "../mycelium-cert" }
# The EXPLAIN surfacing (M-221; SC-5): the facade re-derives selection explanations from a
# PolicyRegistry so "why was this representation chosen?" is answerable in-editor (RFC-0005 §4).
mycelium-select = { path = "../mycelium-select" }
# Document sync (M-310): the text → Node pipeline (parse → check → elaborate) the LSP server runs on
# `didOpen`/`didChange`. The L1 surface prototype, now that RFC-0011 r3 / RFC-0001 r4 are enacted.
mycelium-l1 = { path = "../mycelium-l1" }
# M-359 project metadata: the structured nodule header + manifest + inheritance, so the linter can
# check the header (unknown key / bad SPDX / non-ISO date = explicit error, G2). Above the kernel (KC-3).
mycelium-proj = { path = "../mycelium-proj" }
# The LSP wire protocol (M-310): JSON-RPC 2.0 framing + LSP-shaped diagnostics over stdio. The same
# pinned serde_json the rest of the workspace uses (mycelium-core/-cert/-select/...).
serde_json.workspace = true
# M-345 / RFC-0013 structured diagnostics: the diagnostic record + reified error-handling policy
# derive (de)serialization for the dual human/JSON projection (G11) and the file-as-projection of the
# canonical content-addressed declaration (RFC-0013 §4.7). Same pinned serde the workspace uses.
serde.workspace = true
# Content-addressing the diagnostic record + policy (RFC-0013 §4.3/§4.4; ADR-003) — the same BLAKE3
# the kernel uses for `ContentHash`, here in the tooling layer (no kernel dependency added; KC-3).
blake3.workspace = true
# RFC-0041 §4.7 W1: the shared recursion-budget + guarded-stack leaf, so `llm_canonical`'s
# post-elaboration `Node` render runs on a grown host stack instead of SIGABRT-ing the LSP server on
# a deep editor buffer (RR-29 guard-hole census).
mycelium-workstack = { path = "../mycelium-workstack" }

# M-330 co-authoring loop: the stdin→publishDiagnostics shim used by coauthor.py.
[[example]]
name = "check"
path = "examples/check.rs"
