[package]
name = "mycelium-mlir"
version = "0.0.0"
description = "AOT path — textual ternary-dialect skeleton + env-machine model + a direct-LLVM-IR backend that compiles the bit subset to native code via llc/clang (RFC-0004 §2 direct-LLVM fallback; ADR-007; T1.5). M-150/M-301. The MLIR dialect lowering is deferred until libMLIR is present."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[features]
# `mlir-dialect` (OFF by default) turns on the **real** `ternary`→`arith`/`func`→LLVM dialect
# lowering (M-601; RFC-0004 §2; ADR-009/ADR-019): `dialect::compile_and_run` emits a genuine MLIR
# module in the `arith`/`func` dialects and drives it through `mlir-opt-<v>` + `mlir-translate-<v>`
# (version-matched to the installed LLVM major) to real LLVM IR, then `clang` → native → read-back.
# It needs the libMLIR tools (`scripts/setup-mlir.sh`; ADR-019) — but, like the existing
# `llc`/`clang` path, it **probes for them at runtime and skips gracefully** when absent, so even
# `cargo test --features mlir-dialect` is green on a box without the tools (each test sees
# `DialectError::ToolchainMissing` and returns). The default build/test path is unchanged: with the
# feature OFF the dialect module exposes only the textual skeleton (no native MLIR invocation). The
# trusted base remains the interpreter (NFR-7); this feature is the perf/inspectability path.
mlir-dialect = []

# `bitnet-accel` (OFF by default) is the **explicit capability flag** that enables BitNet-class
# packed-ternary acceleration (M-728; FR-C3; RFC-0029 §7.4). With the feature OFF the
# `accel::accelerated_ternary_dot` entry point performs **explicit, recorded graceful degradation**
# to the reference ternary dot (`bitnet::ternary_dot_ref`) — never a silent slow path: the returned
# `AccelOutcome` records `Path::Reference` and an `EXPLAIN`-able reason (G2). With the feature ON it
# *additionally* requires the runtime capability (a present `clang` JIT toolchain) to engage the
# compiled kernel; if the runtime capability is absent it **also** degrades explicitly and records it.
# So the accel path is engaged iff (compile-time feature ON) AND (runtime capability present) — and
# every other case is a never-silent, recorded fallback to the reference path. Correctness:
# accelerated == reference ternary (Empirical, `tests/bitnet_accel.rs`). It depends on the M-360
# `bitnet` kernels, which already probe `clang` and skip gracefully when absent.
bitnet-accel = []

[dependencies]
mycelium-core = { path = "../mycelium-core" }
# M-853 (RFC-0039 §5.1): the native Dense codegen (`dense_codegen.rs`) is differential-checked against
# `mycelium-dense` (the trusted-base reference); it imports the reference's per-op relative-ε
# constants (`F32_OP_REL_EPS`/`BF16_OP_REL_EPS`/`DENSE_MIN_NORMAL`) so the native bound it stamps is
# the *same* value, never a divergent literal (DRY/VR-5). No cycle: `mycelium-dense` does not depend on
# `mycelium-mlir`.
mycelium-dense = { path = "../mycelium-dense" }
# M-854 (RFC-0039 §5.2): the native VSA codegen (`vsa_codegen.rs`) is differential-checked against
# `mycelium-vsa` (the trusted-base reference) for the 1.0.0-mandatory MAP-I/BSC/HRR/FHRR models; it
# imports the reference's `capacity::proven_capacity_bound` so the single-op MAP-I bundle Proven bound
# is the *same* checked side-condition (never a divergent literal — DRY/VR-5), and refuses SBC/MAP-B
# never-silently. No cycle: `mycelium-vsa` depends only on `mycelium-core`/`mycelium-select`, never on
# `mycelium-mlir`.
mycelium-vsa = { path = "../mycelium-vsa" }
mycelium-interp = { path = "../mycelium-interp" }
# MEM-4 wiring (DN-33 / RFC-0027 §9): the RC-annotated IR + static analysis, and the runtime
# reclamation-record contract the AOT tier emits the §9 audit trail into. Both are upstream of
# `mlir` (they depend only on core / std-core / interp) — the dependency graph stays a DAG.
mycelium-mir-passes = { path = "../mycelium-mir-passes" }
# M-860: the parallel per-function/per-nodule AOT codegen (`emit_llvm_ir_many`) dispatches across
# `mycelium_sched::scheduler::Scheduler` — the M-861 work-stealing OS-thread pool (see the
# `mycelium-sched` entry below).
# M-865: the harness-level AOT/JIT concurrent-batch dispatch (`concurrent.rs`) submits its argument
# jobs directly through the same `mycelium_sched::scheduler::Scheduler` — the same relocated
# M-861/M-864 work-stealing pool `mycelium-interp`'s own M-862 parallel-eval path and this crate's
# M-860 `emit_llvm_ir_many` both dispatch through. No cycle (`mycelium-sched` sits below
# `mycelium-interp`, which this crate already depends on).
mycelium-sched = { path = "../mycelium-sched" }
# M-883/M-884 (runtime-ABI seam extraction): the reclamation EXPLAIN/audit record (RFC-0027 §9,
# `rc_plan.rs`) and the structured-concurrency supervision surface (M-713 / RFC-0008 RT4·RT7,
# `runtime.rs`'s `reclaim` driver, DN-58 §B / M-817) — relocated here from `mycelium-std-runtime`
# (tier `std`) to fix the upward `mlir (core) -> std-runtime (std)` dependency edge the M-879
# `no-upward-tier-edges` gate flagged. `mycelium-rt-abi` sits below `mycelium-mlir` (it depends only
# on core / interp / sched, all already depended on above), so this replaces the former
# `mycelium-std-runtime` normal dependency entirely — `mycelium-mlir` no longer depends on
# `mycelium-std-runtime` at all (normal or dev).
mycelium-rt-abi = { path = "../mycelium-rt-abi" }
# RFC-0041 W3½ (M-979): the AOT env-machine's control-stack depth ceiling + host-stack guard are now
# the *shared* never-silent recursion budget/guard leaf every Mycelium machine charges against — the
# ad-hoc `stack.len() >= max_depth` ceiling is replaced by `RecursionBudget::try_enter`, and the entry
# is wrapped in `ensure_sufficient_stack`. `mycelium-workstack` is stratum 1 (below `mycelium-mlir` at
# 4) and already a transitive dep via `mycelium-mir-passes`, so this direct edge is downward — no
# deps-strata change (mlir's stratum = 1 + max(deps) is unchanged, mir-passes already contributing 2).
mycelium-workstack = { path = "../mycelium-workstack" }

[dev-dependencies]
# M-961: property tests for the inject-gate verify bounds (house rule: a property test per bound).
proptest = "1"
# NOTE (M-999, PR #1194 review HIGH): the AOT-vs-interpreter ordering witness lives in
# `crates/mycelium-l1/tests/aot_vs_interp_bench.rs` — NOT here. Placing it here required a
# `mycelium-l1` dev-dependency, which closed a REAL {mycelium-l1, mycelium-mlir} dev-dependency
# cycle that `cargo xtask deps` rejects (DN-68 [acyclic-including-dev]; cargo itself does not
# reject dev-dep cycles, which is exactly why the gate exists). The bench uses the pre-existing
# `mycelium-l1 -[dev]-> mycelium-mlir` edge instead; do not re-add the reverse edge.
# The interp↔AOT differential (M-151) drives both paths with the certified binary↔ternary swap,
# and since M-210 validates each pair through the shared TV checker (Certificate from numerics).
mycelium-cert = { path = "../mycelium-cert" }
mycelium-numerics = { path = "../mycelium-numerics" }
# The E3 wrong-layout differential (M-251) drives the layout chosen by the M-250 packing selector.
mycelium-select = { path = "../mycelium-select" }
# M-853 (RFC-0039 §5.1): the Dense three-way differential (`tests/dense_differential.rs`) uses
# `DenseSpace` directly as the reference the native Dense codegen is checked against (the interpreter
# has no `dense.*` prims — Dense is a standalone operational surface, like the cert swap). Already a
# regular dependency above; listed in dev-deps is unnecessary (it is in scope for tests transitively).
